# kaggle-titanic-ML

./: .gitignore  README.md  main.py  notebook.ipynb  pyproject.toml
data/: rf_submission.csv
models/: rf_submission.csv  xgb_submission.csv
